# module-6-cjordan239

./: .coverage  .env  pyproject.toml
app/: __init__.py
app/controller/animal/: animal_route.py
app/controller/employees/: employees_route.py
app/controller/schema/: create_animal_request.py  update_animal_request.py
app/models/: animal.py  employees.py
app/repositories/: animals_repo.py  employees_repo.py
app/route/: animal_route.py  employees_route.py
app/services/: animals_services.py  employees_services.py
migrations/versions/: 97bff9bf3be6_add_color_in_animals_table.py  c12836f77724_add_animals_table.py
tests/: conftest.py  test_example.py
tests/controller/: test_animal_controller.py  test_employee_controller.py
tests/services/: animals_services.py
tests/util/: __init__.py  conftest.py  test_api_response.py
