[tool.poetry]
name = "module-6-cjordan239"
version = "0.1.0"
description = ""
authors = ["cjordan239 <chris.jordanig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.5"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.1"
pytest-mock = "^3.12.0"
pydantic = "^2.6.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
